tests/test_proof/bad/array_length-overlap.catala_en
## Test

```catala
declaration scope A:
  internal x content collection integer
  output y content boolean

scope A:
  definition x equals [0; 5]
  definition y under condition (number of x) >= 0 consequence equals true
  definition y under condition (number of x) = 1 consequence equals false
```

```catala-test-inline
$ catala Proof --disable_counterexamples 
[WARNING] [A.y] At least two exceptions overlap for this variable:
┌─⯈ array_length-overlap.catala_en:6.10-6.11:
└─┐
6 │   output y content boolean
  │          ‾
  └─ Test
Counterexample generation is disabled so none was generated.
```
